# 114-2-Fire_Smoke_Detection

./: .gitignore  README.md  TODO.md  optimization_benchmark.py  process_enhanced_video.py  pyproject.toml
Deployment/: Home.py  Setup.py
Deployment/Models/nano_ncnn_model/: metadata.yaml  model.ncnn.param  model_ncnn.py
Deployment/pages/: 4_Video_Detection.py
training/: benchmark.py  config.yaml
