[project]
name = "fire-detection-yolo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26,<3",
    "opencv-python-headless==4.10.0.84",
    "pillow>=10.3.0,<13",
    "requests==2.32.3",
    "streamlit==1.54.0",
    "ultralytics==8.2.18",
]
